// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert > snap 1`] = `
".alert {
  @apply grid w-full grid-flow-row content-start items-center justify-items-center gap-4 text-center sm:grid-flow-col sm:grid-cols-[auto_minmax(auto,1fr)] sm:justify-items-start sm:text-left;
}"
`;

exports[`artboard > snap 1`] = `
".artboard {
  @apply w-full;
}"
`;

exports[`avatar > snap 1`] = `
".avatar {
  @apply relative inline-flex;
}
.avatar > div {
  @apply block aspect-square overflow-hidden;
}
.avatar img {
  @apply h-full w-full object-cover;
}
.avatar.placeholder > div {
  @apply flex items-center justify-center;
}"
`;

exports[`badge > snap 1`] = `
".badge {
  @apply inline-flex items-center justify-center transition duration-200 ease-out h-5 text-sm leading-5 w-[fit-content] pl-[0.563rem] pr-[0.563rem];
}"
`;

exports[`button > snap 1`] = `
".btn {
  @apply rounded-btn inline-flex flex-shrink-0 cursor-pointer select-none flex-wrap items-center justify-center border-transparent text-center transition duration-200 ease-out;
  @apply min-h-12 h-12 px-4;
  font-size: 0.875rem;
  line-height: 1em;
  /* disabled */
  /* shapes */
}
.btn-disabled, .btn[disabled], .btn:disabled {
  @apply pointer-events-none;
}
.btn-square {
  @apply h-12 w-12 p-0;
}
.btn-circle {
  @apply h-12 w-12 rounded-full p-0;
}

/* radio input and checkbox as button */
.btn:is(input[type=checkbox]),
.btn:is(input[type=radio]) {
  @apply w-auto appearance-none;
}

.btn:is(input[type=checkbox]):after,
.btn:is(input[type=radio]):after {
  @apply content-[attr(aria-label)];
}"
`;

exports[`card > snap 1`] = `
".card {
  @apply relative flex flex-col;
}
.card:focus {
  @apply outline-none;
}
.card-body {
  @apply flex flex-auto flex-col;
}
.card-body :where(p) {
  @apply flex-grow;
}
.card-actions {
  @apply flex flex-wrap items-start gap-2;
}
.card figure {
  @apply flex items-center justify-center;
}
.card.image-full {
  @apply grid;
}
.card.image-full:before {
  @apply relative;
  content: \\"\\";
}
.card.image-full:before, .card.image-full > * {
  @apply col-start-1 row-start-1;
}
.card.image-full > figure img {
  @apply h-full object-cover;
}
.card.image-full > .card-body {
  @apply relative;
}"
`;

exports[`carousel > snap 1`] = `
".carousel {
  @apply inline-flex overflow-x-scroll;
  scroll-snap-type: x mandatory;
  scroll-behavior: smooth;
}
.carousel-vertical {
  @apply flex-col overflow-y-scroll;
  scroll-snap-type: y mandatory;
}
.carousel-item {
  @apply box-content flex flex-none;
  scroll-snap-align: start;
}
.carousel-center .carousel-item {
  scroll-snap-align: center;
}
.carousel-end .carousel-item {
  scroll-snap-align: end;
}"
`;

exports[`chat > snap 1`] = `
".chat {
  @apply grid grid-cols-2 gap-x-3 py-1;
}
.chat-image {
  @apply row-span-2 self-end;
}
.chat-header {
  @apply row-start-1 text-sm;
}
.chat-footer {
  @apply row-start-3 text-sm;
}
.chat-bubble {
  @apply relative block w-fit px-4 py-2;
  max-width: 90%;
}
.chat-bubble:before {
  @apply absolute bottom-0 h-3 w-3;
  background-color: inherit;
  content: \\"\\";
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
}
.chat-start {
  @apply place-items-start;
  grid-template-columns: auto 1fr;
}
.chat-start .chat-header {
  @apply col-start-2;
}
.chat-start .chat-footer {
  @apply col-start-2;
}
.chat-start .chat-image {
  @apply col-start-1;
}
.chat-start .chat-bubble {
  @apply col-start-2;
}
.chat-start .chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 3 3 L 3 0 C 3 1 1 3 0 3'/%3e%3c/svg%3e\\");
}
[dir=rtl] .chat-start .chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 1 3 L 3 3 C 2 3 0 1 0 0'/%3e%3c/svg%3e\\");
}
.chat-end {
  @apply place-items-end;
  grid-template-columns: 1fr auto;
}
.chat-end .chat-header {
  @apply col-start-1;
}
.chat-end .chat-footer {
  @apply col-start-1;
}
.chat-end .chat-image {
  @apply col-start-2;
}
.chat-end .chat-bubble {
  @apply col-start-1;
}
.chat-end .chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 1 3 L 3 3 C 2 3 0 1 0 0'/%3e%3c/svg%3e\\");
}
[dir=rtl] .chat-end .chat-bubble:before {
  mask-image: url(\\"data:image/svg+xml,%3csvg width='3' height='3' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill='black' d='m 0 3 L 3 3 L 3 0 C 3 1 1 3 0 3'/%3e%3c/svg%3e\\");
}"
`;

exports[`checkbox > snap 1`] = `
".checkbox {
  @apply shrink-0;
}"
`;

exports[`countdown > snap 1`] = `
":root .countdown {
  line-height: 1em;
}

.countdown {
  display: inline-flex;
}
.countdown > * {
  height: 1em;
  @apply inline-block overflow-y-hidden;
}
.countdown > *:before {
  position: relative;
  content: \\"00\\\\a 01\\\\a 02\\\\a 03\\\\a 04\\\\a 05\\\\a 06\\\\a 07\\\\a 08\\\\a 09\\\\a 10\\\\a 11\\\\a 12\\\\a 13\\\\a 14\\\\a 15\\\\a 16\\\\a 17\\\\a 18\\\\a 19\\\\a 20\\\\a 21\\\\a 22\\\\a 23\\\\a 24\\\\a 25\\\\a 26\\\\a 27\\\\a 28\\\\a 29\\\\a 30\\\\a 31\\\\a 32\\\\a 33\\\\a 34\\\\a 35\\\\a 36\\\\a 37\\\\a 38\\\\a 39\\\\a 40\\\\a 41\\\\a 42\\\\a 43\\\\a 44\\\\a 45\\\\a 46\\\\a 47\\\\a 48\\\\a 49\\\\a 50\\\\a 51\\\\a 52\\\\a 53\\\\a 54\\\\a 55\\\\a 56\\\\a 57\\\\a 58\\\\a 59\\\\a 60\\\\a 61\\\\a 62\\\\a 63\\\\a 64\\\\a 65\\\\a 66\\\\a 67\\\\a 68\\\\a 69\\\\a 70\\\\a 71\\\\a 72\\\\a 73\\\\a 74\\\\a 75\\\\a 76\\\\a 77\\\\a 78\\\\a 79\\\\a 80\\\\a 81\\\\a 82\\\\a 83\\\\a 84\\\\a 85\\\\a 86\\\\a 87\\\\a 88\\\\a 89\\\\a 90\\\\a 91\\\\a 92\\\\a 93\\\\a 94\\\\a 95\\\\a 96\\\\a 97\\\\a 98\\\\a 99\\\\a\\";
  white-space: pre;
  top: calc(var(--ice-value) * -1em);
}"
`;

exports[`divider > snap 1`] = `
".divider {
  @apply flex flex-row items-center self-stretch;
}
.divider:before, .divider:after {
  content: \\"\\";
  @apply flex-grow;
  @apply h-0.5 w-full;
}"
`;

exports[`drawer > snap 1`] = `
".drawer {
  @apply relative grid;
  grid-auto-columns: max-content auto;
}
.drawer-content {
  @apply col-start-2 row-start-1;
}
.drawer-side {
  @apply pointer-events-none fixed left-0 top-0 col-start-1 row-start-1 grid w-full grid-cols-1 grid-rows-1 items-start justify-items-start overflow-y-auto overscroll-contain;
  height: 100vh;
  height: 100dvh;
  scrollbar-width: none;
}
.drawer-side::-webkit-scrollbar {
  @apply hidden;
}
.drawer-side > .drawer-overlay {
  @apply sticky top-0 place-self-stretch;
}
.drawer-side > * {
  @apply col-start-1 row-start-1;
}
.drawer-side > *:not(.drawer-overlay) {
  @apply transition duration-300 ease-out;
  transform: translateX(-100%);
}
[dir=rtl] .drawer-side > *:not(.drawer-overlay) {
  transform: translateX(-100%);
}
.drawer-toggle {
  @apply fixed h-0 w-0 appearance-none opacity-0;
}
.drawer-toggle:checked ~ .drawer-side {
  @apply pointer-events-auto visible;
}
.drawer-toggle:checked ~ .drawer-side > *:not(.drawer-overlay) {
  transform: translateX(0%);
}
.drawer-end {
  grid-auto-columns: auto max-content;
}
.drawer-end .drawer-toggle ~ .drawer-content {
  @apply col-start-1;
}
.drawer-end .drawer-toggle ~ .drawer-side {
  @apply col-start-2 justify-items-end;
}
.drawer-end .drawer-toggle ~ .drawer-side > *:not(.drawer-overlay) {
  transform: translateX(100%);
}
.drawer-end .drawer-toggle:checked ~ .drawer-side > *:not(.drawer-overlay) {
  transform: translateX(0%);
}"
`;

exports[`form > snap 1`] = `
".form-control {
  @apply flex flex-col;
}

.label {
  @apply flex select-none items-center justify-between;
}"
`;

exports[`indicator > snap 1`] = `
".indicator {
  @apply relative inline-flex;
  width: max-content;
}
.indicator :where(.indicator-item) {
  z-index: 1;
  @apply absolute transform whitespace-nowrap;
}"
`;

exports[`input > snap 1`] = `
".input {
  @apply flex-shrink;
  @apply h-12 px-4 text-sm leading-loose;
}"
`;

exports[`join > snap 1`] = `
".join {
  @apply inline-flex items-stretch;
}
.join :where(.join-item) {
  border-start-end-radius: 0;
  border-end-end-radius: 0;
  border-end-start-radius: 0;
  border-start-start-radius: 0;
}
.join .join-item:not(:first-child):not(:last-child), .join *:not(:first-child):not(:last-child) .join-item {
  border-start-end-radius: 0;
  border-end-end-radius: 0;
  border-end-start-radius: 0;
  border-start-start-radius: 0;
}
.join .join-item:first-child:not(:last-child), .join *:first-child:not(:last-child) .join-item {
  border-start-end-radius: 0;
  border-end-end-radius: 0;
}
.join .dropdown .join-item:first-child:not(:last-child), .join *:first-child:not(:last-child) .dropdown .join-item {
  border-start-end-radius: inherit;
  border-end-end-radius: inherit;
}
.join :where(.join-item:first-child:not(:last-child)), .join :where(*:first-child:not(:last-child) .join-item) {
  border-end-start-radius: inherit;
  border-start-start-radius: inherit;
}
.join .join-item:last-child:not(:first-child), .join *:last-child:not(:first-child) .join-item {
  border-end-start-radius: 0;
  border-start-start-radius: 0;
}
.join :where(.join-item:last-child:not(:first-child)), .join :where(*:last-child:not(:first-child) .join-item) {
  border-start-end-radius: inherit;
  border-end-end-radius: inherit;
}

:where(.join *) {
  @apply rounded-[inherit];
}"
`;

exports[`kbd > snap 1`] = `
".kbd {
  @apply inline-flex items-center justify-center;
}"
`;

exports[`link > snap 1`] = `
".link {
  @apply cursor-pointer underline;
}
.link-hover {
  @apply no-underline [@media(hover:hover)]:hover:underline;
}"
`;

exports[`mask > snap 1`] = `
".mask {
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
}

.mask-half-1 {
  mask-size: 200%;
  mask-position: left;
}

.mask-half-2 {
  mask-size: 200%;
  mask-position: right;
}"
`;

exports[`mockup > snap 1`] = `
".mockup-code {
  @apply relative overflow-hidden overflow-x-auto;
}
.mockup-code pre[data-prefix]:before {
  content: attr(data-prefix);
  @apply inline-block text-right;
}
.mockup-window {
  @apply relative overflow-hidden overflow-x-auto;
}
.mockup-window pre[data-prefix]:before {
  content: attr(data-prefix);
  @apply inline-block text-right;
}
.mockup-browser {
  @apply relative overflow-hidden overflow-x-auto;
}
.mockup-browser pre[data-prefix]:before {
  content: attr(data-prefix);
  @apply inline-block text-right;
}"
`;

exports[`progress > snap 1`] = `
".progress {
  @apply relative w-full appearance-none overflow-hidden;
}"
`;

exports[`radial-progress > snap 1`] = `
".radial-progress {
  @apply relative inline-grid h-[var(--size)] w-[var(--size)] place-content-center rounded-full bg-transparent;
  vertical-align: middle;
  box-sizing: content-box;
}

.radial-progress::-moz-progress-bar {
  @apply appearance-none bg-transparent;
}

.radial-progress::-webkit-progress-value {
  @apply appearance-none bg-transparent;
}

.radial-progress::-webkit-progress-bar {
  @apply appearance-none bg-transparent;
}

.radial-progress:before,
.radial-progress:after {
  @apply absolute rounded-full;
  content: \\"\\";
}

.radial-progress:before {
  @apply inset-0;
  background: radial-gradient(farthest-side, currentColor 98%, rgba(0, 0, 0, 0)) top/var(--ice-thickness) var(--ice-thickness) no-repeat, conic-gradient(currentColor calc(var(--ice-value) * 1%), rgba(0, 0, 0, 0) 0);
  -webkit-mask: radial-gradient(farthest-side, rgba(0, 0, 0, 0) calc(99% - var(--ice-thickness)), #000 calc(100% - var(--ice-thickness)));
  mask: radial-gradient(farthest-side, rgba(0, 0, 0, 0) calc(99% - var(--ice-thickness)), #000 calc(100% - var(--ice-thickness)));
}

.radial-progress:after {
  inset: calc(50% - var(--ice-thickness) / 2);
  transform: rotate(calc(var(--ice-value) * 3.6deg - 90deg)) translate(calc(var(--ice-size) / 2 - 50%));
}"
`;

exports[`radio > snap 1`] = `
".radio {
  @apply shrink-0;
}"
`;

exports[`range > snap 1`] = `
".range {
  @apply h-6 w-full cursor-pointer;
}
.range:focus {
  outline: none;
}"
`;

exports[`rating > snap 1`] = `
".rating {
  @apply relative inline-flex;
}
.rating :where(input) {
  @apply cursor-pointer rounded-none;
}"
`;

exports[`select > snap 1`] = `
".select {
  @apply inline-flex cursor-pointer select-none appearance-none;
  @apply min-h-12 h-12 pl-4 pr-10 text-sm leading-loose;
  /* disabled */
  /* &-disabled,
  &[disabled] {
    @apply pointer-events-none;
  } */
  /* multiple */
}
.select[multiple] {
  @apply h-auto;
}"
`;

exports[`stack > snap 1`] = `
".stack {
  @apply inline-grid;
}
.stack > * {
  @apply col-start-1 row-start-1;
}
.stack > * {
  transform: translateY(10%) scale(0.9);
  z-index: 1;
}
.stack > *:nth-child(2) {
  transform: translateY(5%) scale(0.95);
  z-index: 2;
}
.stack > *:nth-child(1) {
  transform: translateY(0) scale(1);
  z-index: 3;
}"
`;

exports[`stat > snap 1`] = `
".stats {
  @apply inline-grid;
}

:where(.stats) {
  @apply grid-flow-col;
}

.stat {
  @apply inline-grid w-full;
  grid-template-columns: repeat(1, 1fr);
}
.stat-figure {
  @apply col-start-2 row-span-3 row-start-1 place-self-center justify-self-end;
}
.stat-title {
  @apply col-start-1 whitespace-nowrap;
}
.stat-value {
  @apply col-start-1 whitespace-nowrap;
}
.stat-desc {
  @apply col-start-1 whitespace-nowrap;
}
.stat-actions {
  @apply col-start-1 whitespace-nowrap;
}

/* .stats.grid-flow-row {
  @apply auto-rows-fr;
} */"
`;

exports[`steps > snap 1`] = `
".steps {
  @apply inline-grid grid-flow-col overflow-hidden overflow-x-auto;
  counter-reset: step;
  grid-auto-columns: 1fr;
}
.steps .step {
  @apply grid grid-cols-1 grid-rows-2 place-items-center text-center;
}"
`;

exports[`swap > snap 1`] = `
".swap {
  @apply relative inline-grid select-none place-content-center;
}

.swap > * {
  @apply col-start-1 row-start-1;
}

.swap input {
  @apply appearance-none;
}

.swap .swap-on,
.swap .swap-indeterminate,
.swap input:indeterminate ~ .swap-on {
  @apply opacity-0;
}

.swap input:checked ~ .swap-off,
.swap-active .swap-off,
.swap input:indeterminate ~ .swap-off {
  @apply opacity-0;
}

.swap input:checked ~ .swap-on,
.swap-active .swap-on,
.swap input:indeterminate ~ .swap-indeterminate {
  @apply opacity-100;
}"
`;

exports[`textarea > snap 1`] = `
".textarea {
  @apply min-h-12 flex-shrink px-4 py-2 text-sm leading-loose;
}"
`;

exports[`toast > snap 1`] = `
".toast {
  @apply fixed flex min-w-fit flex-col whitespace-nowrap;
}"
`;

exports[`toggle > snap 1`] = `
".toggle {
  @apply shrink-0;
}"
`;
